# gRPC-rust-example

./: Cargo.toml  README.md  build.rs  hello_world.proto
src/: client.rs  server.rs
