[package]
name = "grpc_rust_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread"]}
prost = "0.11"
tonic = { version = "0.9.2" }

[build-dependencies]
tonic-build = { features = ["prost"] }
